# slack-thread-manager

./: .gitignore  AGENTS.md  SPECIFICATION.md  idea_memo.txt  main.py  pyproject.toml  slack-thread-manager.code-workspace
backend/: .env.example  README.md  main.py  pyproject.toml  test_api.py  test_claude_agent.py
backend/api/: channel_export.py  config.py  discover.py  search.py  summaries.py  sync.py  tags.py  threads.py  views.py
backend/models/: __init__.py  channel_export.py  config.py  discover.py  message.py  summary.py  thread.py  view.py
backend/repositories/: __init__.py  channel_export_repository.py  config_repository.py  message_repository.py  summary_repository.py  tag_repository.py  thread_repository.py  view_repository.py
backend/services/: __init__.py  channel_exporter.py  channel_rollup_builder.py  chatgpt_client.py  claude_agent.py  slack_client.py  summary_generator.py  thread_discovery.py  thread_manager.py
backend/tools/: thread_tools.py
backend/utils/: __init__.py  file_handler.py  logger.py
docs/: CHANNEL_EXPORT_IMPROVEMENT_PLAN.md  DATA_STRUCTURE.md  FRONTEND_GUIDE.md  PROJECT_USER_DAILY_WEEKLY_SPEC.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: ChannelManagementModal.css  ChannelManagementModal.tsx  FilterPanel.css  FilterPanel.tsx  Pagination.css  Pagination.tsx  SlackCredentialsModal.css  SlackCredentialsModal.tsx  TagManagementModal.css  TagManagementModal.tsx  ThreadCreateModal.css  ThreadCreateModal.tsx  ThreadEditModal.css  ThreadEditModal.tsx  (+6 more)
(+14 files in other folders)
