[project]
name = "slack-thread-manager-backend"
version = "1.0.0"
description = "Slack Thread Manager Backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "apscheduler>=3.10.4",
    "structlog>=24.1.0",
    "openai>=1.10.0",
    "claude-agent-sdk>=0.1.0",
]

[tool.uv]
dev-dependencies = []
